# snitch

./: .gitignore  .gitlab-ci.yml  404.html  index.html  plot_softmax.py  print_parallel_softmax.py  print_single_softmax.py  print_softmax_results.py  sitemap.xml
.github/workflows/: gitlab-ci.yml
.gitlab-ci.d/: Memora.yml
hw/system/: .gitignore
publications/: index.html
rm/custom_instructions/: index.html
rm/reqrsp_interface/: index.html
rm/snitch/: index.html
rm/snitch_cluster/: index.html
rm/solder/: index.html
runtime/Classes/: index.html
runtime/Examples/: index.html
runtime/Files/: index.html
runtime/Modules/: index.html
runtime/Namespaces/: index.html
runtime/Pages/: index.html
schema-doc/address_range/: index.html
schema-doc/address_range-properties-address/: index.html
schema-doc/address_range-properties-length/: index.html
schema-doc/axi_tlb/: index.html
schema-doc/axi_tlb-properties-l1_cut_ax/: index.html
schema-doc/axi_tlb-properties-l1_num_entries/: index.html
schema-doc/axi_tlb-properties-max_trans/: index.html
schema-doc/axi_xbar/: index.html
schema-doc/axi_xbar-properties-fall_through/: index.html
schema-doc/axi_xbar-properties-max_mst_trans/: index.html
schema-doc/axi_xbar-properties-max_slv_trans/: index.html
schema-doc/occamy/: index.html
schema-doc/occamy-properties-configuration-of-external-hbm-interface/: index.html
schema-doc/occamy-properties-configuration-of-external-hbm-interface-properties-address_1/: index.html
schema-doc/occamy-properties-configuration-of-external-hbm-interface-properties-address_2/: index.html
schema-doc/occamy-properties-configuration-of-external-hbm-interface-properties-cfg_regions/: index.html
schema-doc/occamy-properties-configuration-of-external-hbm-interface-properties-channel_size/: index.html
schema-doc/occamy-properties-configuration-of-external-hbm-interface-properties-nr_channels_address_0/: index.html
schema-doc/occamy-properties-configuration-of-external-hbm-interface-properties-nr_channels_total/: index.html
schema-doc/occamy-properties-configuration-of-external-pcie-port/: index.html
schema-doc/occamy-properties-configuration-of-external-pcie-port-properties-address_io/: index.html
schema-doc/occamy-properties-configuration-of-external-pcie-port-properties-address_mm/: index.html
schema-doc/occamy-properties-configuration-of-external-pcie-port-properties-length/: index.html
schema-doc/occamy-properties-is_remote_quadrant/: index.html
schema-doc/occamy-properties-narrow_xbar_slv_id_width/: index.html
schema-doc/occamy-properties-number-of-cuts-on-the-axi-bus-properties-atomic_adapter_narrow/: index.html
schema-doc/occamy-properties-number-of-cuts-on-the-axi-bus-properties-atomic_adapter_narrow_wide/: index.html
schema-doc/occamy-properties-number-of-cuts-on-the-axi-bus-properties-hbmx_to_hbm/: index.html
schema-doc/occamy-properties-number-of-cuts-on-the-axi-bus-properties-inter_to_quad/: index.html
schema-doc/occamy-properties-number-of-cuts-on-the-axi-bus-properties-narrow_and_hbi/: index.html
schema-doc/occamy-properties-number-of-cuts-on-the-axi-bus-properties-narrow_and_pcie/: index.html
schema-doc/occamy-properties-number-of-cuts-on-the-axi-bus-properties-narrow_and_wide/: index.html
schema-doc/occamy-properties-number-of-cuts-on-the-axi-bus-properties-narrow_conv_to_spm_narrow/: index.html
schema-doc/occamy-properties-number-of-cuts-on-the-axi-bus-properties-narrow_conv_to_spm_narrow_pre/: index.html
schema-doc/occamy-properties-number-of-cuts-on-the-axi-bus-properties-narrow_to_cva6/: index.html
schema-doc/occamy-properties-number-of-cuts-on-the-axi-bus-properties-narrow_to_quad/: index.html
schema-doc/occamy-properties-number-of-cuts-on-the-axi-bus-properties-periph_axi_lite/: index.html
schema-doc/occamy-properties-number-of-cuts-on-the-axi-bus-properties-periph_axi_lite_narrow/: index.html
schema-doc/occamy-properties-number-of-cuts-on-the-axi-bus-properties-periph_axi_lite_narrow_bootrom_cfg/: index.html
schema-doc/occamy-properties-number-of-cuts-on-the-axi-bus-properties-periph_axi_lite_narrow_chip_ctrl_cfg/: index.html
schema-doc/occamy-properties-number-of-cuts-on-the-axi-bus-properties-periph_axi_lite_narrow_clint_cfg/: index.html
schema-doc/occamy-properties-number-of-cuts-on-the-axi-bus-properties-periph_axi_lite_narrow_fll_hbm2e_cfg/: index.html
schema-doc/occamy-properties-number-of-cuts-on-the-axi-bus-properties-periph_axi_lite_narrow_fll_periph_cfg/: index.html
schema-doc/occamy-properties-number-of-cuts-on-the-axi-bus-properties-periph_axi_lite_narrow_fll_system_cfg/: index.html
search/: search_index.json
sw/dphpc/: .gitignore  CMakeLists.txt  README.md  benchmark.sh  measurements.py  measurements_conv2d.py  perf_extr.py  plot_conv2d.py  plot_matmul_csr.py  requirements.txt  run_measurements.py  test_cfg.json
sw/dphpc/data/: data.h.tpl  data_ccc.h.tpl  data_ccd.h.tpl  data_cdc.h.tpl  data_cdd.h.tpl  data_conv2d_cdc.h.tpl  data_dcd.h.tpl  data_dcd_csrr.h.tpl  data_ddd.h.tpl  data_dense.h.tpl  data_dense_gen.py  data_gen.py  data_gen_conv2d.py  data_gen_matmul_csr.py  data_gen_softmax_csr.py  data_gen_softmax_dense.py  data_matmul.h.tpl  data_softmax.h.tpl  data_softmax_csr.h.tpl  data_softmax_dense.h.tpl
sw/dphpc/graphs/: matmul.drawio
sw/dphpc/include/: conv2d_csr.h  matmul_csr.h  matrix_types.h  softmax_csr.h  softmax_dense.h
sw/dphpc/src/: main_conv2d_csr.c  main_conv2d_csr_csr_csr.c  main_conv2d_csr_csr_dense.c  main_conv2d_csr_dense.c  main_conv2d_csr_dense_csr.c  main_conv2d_csr_dense_dense.c  main_conv2d_dense.c  main_conv2d_dense_csr_dense.c  main_conv2d_dense_csrr_dense.c  main_conv2d_dense_dense_dense.c  main_matmul_csr.c  main_matmul_csr_csr.c  main_matmul_csr_csr_to_dense.c  main_matmul_csr_dense.c  main_matmul_csr_dense_to_dense.c  main_matmul_dense_dense.c  main_softmax_csr.c  main_softmax_dense.c
sw/dphpc/src/kernel/: conv2d_csr.c  matmul_csr.c  softmax_csr.c  softmax_dense.c
sw/dphpc/src/utils/: utils.c  utils.h
util/: Makefrag  gen_trace.py
(+396 files in other folders)
